compiler/tests/success/otbn/bn_mov.jazz
export
fn bn_mov(reg u256 arg0) -> reg u256 {
    reg u256 x;
    x = arg0;
    return x;
}
