compiler/tests/fail/arm-m4/intrinsic_smmulrS.jazz
export
fn smmulr(reg u32 arg0, reg u32 arg1) -> reg u32 {
    reg u32 x;
    ?{}, x = #SMMULRS(arg0, arg1);

    reg u32 res;
    res = x;
    return res;
}

